--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barbearia Borel</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,700;0,900;1,700&display=swap" rel="stylesheet">
     <style>
       body {
         font-family: 'Inter', sans-serif;
@@ -21,7 +21,30 @@
       .font-display {
         font-family: 'Playfair Display', serif;
       }
-      /* Custom scrollbar for a premium look */
+      
+      /* Efeito de Texto Dourado Metálico */
+      .text-premium-gold {
+        background: linear-gradient(to bottom, #f1d37a 0%, #d4af37 50%, #a6892c 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        filter: drop-shadow(0px 2px 4px rgba(0,0,0,0.5));
+      }
+
+      .logo-style {
+        letter-spacing: -0.02em;
+        line-height: 1;
+        font-weight: 900;
+      }
+
+      .sub-logo {
+        letter-spacing: 0.4em;
+        font-weight: 700;
+        text-transform: uppercase;
+        font-size: 0.6rem;
+        color: #8a6d1a;
+      }
+
+      /* Custom scrollbar */
       ::-webkit-scrollbar {
         width: 6px;
       }
