feat: Integrate Firebase Realtime Database for appointments
Replaces local storage with Firebase Realtime Database for appointment persistence.
Introduces real-time subscription for appointments in the AdminPanel component.
Updates storageService to interact with Firebase.
Adds Firebase dependency and configurations.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         font-family: 'Playfair Display', serif;
       }
       
-      /* Efeito de Texto Dourado Metálico */
       .text-premium-gold {
         background: linear-gradient(to bottom, #f1d37a 0%, #d4af37 50%, #a6892c 100%);
         -webkit-background-clip: text;
@@ -44,7 +43,6 @@
         color: #8a6d1a;
       }
 
-      /* Custom scrollbar */
       ::-webkit-scrollbar {
         width: 6px;
       }
@@ -64,7 +62,10 @@
     "recharts": "https://esm.sh/recharts@^3.7.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.38.0"
+    "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
+    "firebase/app": "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js",
+    "firebase/database": "https://www.gstatic.com/firebasejs/10.8.0/firebase-database.js",
+    "firebase/": "https://esm.sh/firebase@^12.9.0/"
   }
 }
 </script>
